# basketball_robot

./: .gitignore
bbbot_collision/: CMakeLists.txt  package.xml
bbbot_collision/launch/: collision_check.launch
bbbot_collision/scripts/: test_collision.py
bbbot_collision/src/: bbbot_collision.cpp
bbbot_collision/srv/: CollisionCheck.srv
bbbot_control/: CMakeLists.txt  package.xml
bbbot_control/launch/: bbbot_control.launch
bbbot_description/: CMakeLists.txt  package.xml
bbbot_description/meshes/collision/: finger.dae  finger.stl  finger_old.dae  stand.dae  stand.stl
bbbot_description/meshes/visual/: finger.dae  stand_low.dae  stand_low.stl
bbbot_description/urdf/: bbbot.xacro  bbbot.xml  bbbot_gazebo.xacro  fingers.xacro  rrbot.gazebo  stand.xacro
bbbot_gazebo/: CMakeLists.txt  package.xml
bbbot_gazebo/config/: leftarm_control.yaml  leftarm_gazebo_control.yaml  leftarm_joint_names.yaml  rightarm_control.yaml  rightarm_gazebo_control.yaml  rightarm_joint_names.yaml
bbbot_gazebo/launch/: bbbot_cmaes.launch  bbbot_cmaes_control.launch  bbbot_cmaes_world.launch  bbbot_control.launch  bbbot_world.launch
bbbot_gazebo/meshes/collision/: cylinder.stl  finger.stl
bbbot_gazebo/meshes/visual/: cylinder.stl  finger.stl  hoop.stl
bbbot_gazebo/models/ball/: model.sdf
bbbot_gazebo/models/cylinder/: model.config  model.sdf
bbbot_gazebo/models/finger/: model.config  model.sdf
bbbot_gazebo/models/hoop/: model.config  model.sdf
bbbot_gazebo/worlds/: bbbot.world
bbbot_moveit/: .setup_assistant  CMakeLists.txt  package.xml
bbbot_moveit/config/: bbbot.srdf  fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml
bbbot_moveit/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
bbbot_robot/: CMakeLists.txt  package.xml  setup.py
bbbot_robot/scripts/: dump_velocity.py  front_throwing.py  gazebo_learning.py  generate_plots.py  groups_learning.py  groups_replay.py  initial_throwing.py  learning.py  old_gazebo_learning.py  plot_fitness.py  plot_groups.py  plot_server.py  replay_gazebo.py  replay_robot.py  rosbag_echo.py  single_arm_throwing.py  test_collision.py  test_control_action.py  test_distance.py  test_gazebo.py  test_speed.py  test_trajectory.py  xxx.py
bbbot_robot/src/bbbot_robot/: arm.py  ball_tracker.py  cmaes.py  cmaes_hansen.py  config_reader.py  dropdown.py  evaluate.py  evaluate_dual.py  plot.py  robot.py  tracking.py
bbbot_robot/src/bbbot_robot/config/: config.cfg  config.conf
docs/: gazebo.md  help.md
src/basket_ball/: arm.py  robot.py
